# study-series-for-rust

./: .gitignore
AI/ai-agent-eval-harness/: .env.example  README.md
AI/chatbot-eval-by-rust/: .env.example
AI/rust-surreal-graph-rag/backend/: .env.example
Azure/azure-bicep-rust-app/infra/modules/ai/: ai-foundry.bicep
GUI/dioxus/dioxus-app/: Cargo.toml
GUI/dioxus/dioxus-app/assets/: main.css
GUI/dioxus/dioxus-app/scripts/: run.sh
GUI/dioxus/dioxus-app/src/presentation/components/: docs_tab.rs  posts_tab.rs  todos_tab.rs  users_tab.rs
GUI/dioxus/dioxus-app/src/presentation/pages/: home.rs  navbar.rs
GUI/egui/egui-app/: Cargo.toml
GUI/egui/egui-app/scripts/: run.sh
GUI/egui/egui-app/src/: main.rs
GUI/gpui/hello-world/scripts/: run.sh
GUI/gpui/window-app/: Cargo.toml  README.md
GUI/gpui/window-app/crates/window-app/src/: main.rs
GUI/gpui/window-app/scripts/: run.sh
GUI/iced/iced-app/scripts/: run.sh
GUI/tauri/ikik/: Cargo.toml  DESIGN.md  README.md
GUI/tauri/ikik/application/: Cargo.toml
GUI/tauri/ikik/application/src/usecases/: create_item.rs  delete_item.rs  delete_kpi_measurement.rs  list_all_kpi_measurements.rs  list_item_revisions.rs  list_items.rs  list_kpi_measurements.rs  recompute.rs  record_kpi_measurement.rs  search_items.rs  update_item.rs  validation.rs
GUI/tauri/ikik/application/tests/: usecases.rs
GUI/tauri/ikik/contracts/src/: dto.rs  error.rs  item.rs
GUI/tauri/ikik/docs/: PROMPT.md
GUI/tauri/ikik/domain/: Cargo.toml
GUI/tauri/ikik/domain/src/: errors.rs
GUI/tauri/ikik/domain/src/entities/: item.rs  mod.rs  revision.rs  taxonomy.rs
GUI/tauri/ikik/domain/src/repositories/: ikik_repository.rs  mod.rs
GUI/tauri/ikik/infrastructure/src/database/: item_repository.rs  mapper.rs  measurement_repository.rs  mod.rs  revision_repository.rs  schema.rs  seed.rs  sqlite_ikik_repository.rs
GUI/tauri/ikik/presentation_backend/: Cargo.toml  tauri.conf.json
GUI/tauri/ikik/presentation_backend/src/: lib.rs
GUI/tauri/ikik/presentation_backend/src/models/: api_error.rs  ikik_dto.rs  mod.rs
GUI/tauri/ikik/presentation_backend/src/routes/: ikik_commands.rs  mod.rs
GUI/tauri/ikik/presentation_frontend/: Cargo.toml  Dioxus.toml
GUI/tauri/ikik/presentation_frontend/assets/: styles.css
GUI/tauri/ikik/presentation_frontend/src/: app.rs  i18n.rs  main.rs  mode.rs  store.rs
GUI/tauri/ikik/presentation_frontend/src/components/: board.rs  breadcrumb.rs  dashboard.rs  item_detail.rs  item_form.rs  kind_view.rs  kpi_measurements.rs  measurement_stepper.rs  mod.rs  quick_add.rs  quick_record.rs  record_grass.rs  record_toast.rs  tree.rs  tree_drag.rs
GUI/tauri/ikik/presentation_frontend/src/i18n/: common.rs  dashboard.rs  detail.rs  form.rs  mod.rs  records.rs  tree.rs
GUI/tauri/ikik/presentation_frontend/src/models/: deadline.rs  ikik.rs  mod.rs  stepper.rs  tree.rs
GUI/tauri/ikik/presentation_frontend/src/services/: ikik_service.rs  mod.rs
GUI/tauri/ivkik/: Makefile.toml  README.md
GUI/tauri/ivkik/application/tests/: usecases.rs
GUI/tauri/ivkik/contracts/src/: dto.rs  error.rs  item.rs
GUI/tauri/ivkik/docs/: PROMPT.md
GUI/tauri/ivkik/domain/: Cargo.toml
GUI/tauri/ivkik/domain/src/: errors.rs
GUI/tauri/ivkik/domain/src/entities/: item.rs  ivkik_item.rs  measurement.rs  mod.rs  revision.rs  taxonomy.rs
GUI/tauri/ivkik/domain/src/repositories/: ivkik_repository.rs  mod.rs
GUI/tauri/ivkik/presentation_backend/: tauri.conf.json
GUI/tauri/ivkik/presentation_backend/src/: lib.rs
GUI/tauri/ivkik/presentation_frontend/: Cargo.toml  Dioxus.toml
GUI/tauri/ivkik/presentation_frontend/assets/: styles.css
GUI/tauri/ivkik/presentation_frontend/src/: app.rs  i18n.rs  main.rs  store.rs  theme.rs
GUI/tauri/ivkik/presentation_frontend/src/components/: board.rs  dashboard.rs  item_detail.rs  item_form.rs  kind_view.rs  kpi_measurements.rs  mod.rs  quick_add.rs  record_grass.rs  record_toast.rs  tree.rs
GUI/tauri/ivkik/presentation_frontend/src/models/: ivkik.rs  mod.rs  tree.rs
GUI/tauri/ivkik/presentation_frontend/src/services/: ivkik_service.rs  mod.rs
GUI/tauri/ivkik/scripts/: release.sh
GUI/tauri/tauri-dioxus-app/: .gitignore  Cargo.toml  DESIGN.md  README.md
GUI/tauri/tauri-dioxus-app/application/: Cargo.toml
GUI/tauri/tauri-dioxus-app/application/tests/: usecases.rs
GUI/tauri/tauri-dioxus-app/presentation_backend/: Cargo.toml  tauri.conf.json
GUI/tauri/tauri-dioxus-app/presentation_backend/src/: lib.rs
GUI/tauri/tauri-dioxus-app/presentation_frontend/: Dioxus.toml
GUI/tauri/tauri-dioxus-app/scripts/: run.sh
GUI/tauri/vvikk/: .taplo.toml  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
GUI/tauri/vvikk/application/tests/: usecases.rs
GUI/tauri/vvikk/contracts/: Cargo.toml
GUI/tauri/vvikk/contracts/src/: item.rs  lib.rs
GUI/tauri/vvikk/docs/: prompt.md
GUI/tauri/vvikk/domain/: Cargo.toml
GUI/tauri/vvikk/domain/src/: errors.rs
GUI/tauri/vvikk/domain/src/entities/: contact.rs  mod.rs  vvkik_item.rs
GUI/tauri/vvikk/domain/src/repositories/: contact_repository.rs  mod.rs  vvkik_repository.rs
GUI/tauri/vvikk/presentation_backend/: Cargo.toml  tauri.conf.json
GUI/tauri/vvikk/presentation_frontend/: Cargo.toml
GUI/tauri/vvikk/presentation_frontend/assets/: styles.css
GUI/tauri/vvikk/presentation_frontend/src/: app.rs  main.rs  store.rs
GUI/tauri/vvikk/presentation_frontend/src/components/: board.rs  card.rs  contact_form.rs  contact_list.rs  item_form.rs  kind_view.rs  mod.rs  quick_add.rs  tree.rs  vvkik_tree.rs
GUI/tauri/vvikk/presentation_frontend/src/models/: contact.rs  mod.rs  tree.rs  vvkik.rs
GUI/tauri/vvikk/presentation_frontend/src/services/: contact_service.rs  mod.rs  vvkik_service.rs
GUI/tauri/vvikk/scripts/: dev.sh
GUI/tauri/vvkik/: README.md  rust-toolchain.toml
GUI/tauri/vvkik/docs/: PROMPT.md
GUI/tauri/vvkik/infrastructure/: Cargo.toml
GUI/tauri/vvkik/infrastructure/src/database/: mod.rs  seed.rs  sqlite_vvkik_repository.rs
GUI/tauri/vvkik/presentation_backend/: tauri.conf.json
GUI/tauri/vvkik/presentation_frontend/: Dioxus.toml
(+105 files in other folders)
