[package]
  authors = ["mingyuchoo <mingyuchoo@gmail.com>"]
  edition = "2024"
  name    = "dioxus-app"
  version = "0.1.0"

[dependencies]
  async-trait = "0.1.89"
  dioxus      = {features = ["router", "fullstack"], version = "0.8.0-alpha.0"}
  dirs        = "6.0"
  futures     = "0.3"
  reqwest     = {features = ["json"], version = "0.13.4"}
  rusqlite    = {optional = true, version = "0.40.1"}
  serde       = {features = ["derive"], version = "1.0"}
  serde_json  = "1.0"


[features]
  default   = ["web"]
  desktop   = ["dioxus/desktop", "native-db"]
  mobile    = ["dioxus/mobile", "native-db"]
  native-db = ["rusqlite"]
  web       = ["dioxus/web"]

[profile]

  [profile.wasm-dev]
    inherits  = "dev"
    opt-level = 1

  [profile.server-dev]
    inherits = "dev"

  [profile.android-dev]
    inherits = "dev"
