[workspace]
  default-members = ["crates/window-app"]
  members         = ["crates/window-app"]
  resolver        = "2"

  [workspace.dependencies]
    anyhow         = "1.0.102"
    gpui           = "0.2.2"
    gpui-component = "0.5.1"
    rust-embed     = {features = ["interpolate-folder-path"], version = "8.11.0"}
    window-app     = {path = "crates/window-app"}
