[workspace]
  members = [
    "contracts",
    "domain",
    "application",
    "infrastructure",
    "presentation_backend",
    "presentation_frontend",
  ]
  resolver = "2"

  [workspace.package]
    authors = ["you"]
    edition = "2024"
    version = "0.1.0"

  [workspace.dependencies]
    # Domain layer dependencies (minimal)
    chrono    = {features = ["serde"], version = "0.4.45"}
    serde     = {features = ["derive"], version = "1.0.228"}
    thiserror = "2.0.18"
    uuid      = {features = ["v4", "serde", "js"], version = "1.23.2"}

    # Application layer dependencies
    async-trait = "0.1.89"

    # Infrastructure layer dependencies
    sqlx  = {features = ["runtime-tokio", "sqlite", "chrono", "uuid"], version = "0.9.0"}
    tokio = {features = ["full"], version = "1.52.3"}

    # Presentation backend dependencies
    anyhow              = "1.0.102"
    serde_json          = "1.0.150"
    tauri               = {features = [], version = "2.11.2"}
    tauri-build         = {features = [], version = "2.6.2"}
    tauri-plugin-opener = "2.5.4"
    tracing             = "0.1.41"
    tracing-subscriber  = {features = ["env-filter"], version = "0.3.20"}

    # Presentation frontend dependencies
    dioxus               = {features = ["web"], version = "0.7.9"}
    dioxus-logger        = "0.7.9"
    gloo-timers          = {features = ["futures"], version = "0.3.0"}
    js-sys               = "0.3.99"
    serde-wasm-bindgen   = "0.6.5"
    wasm-bindgen         = "0.2.122"
    wasm-bindgen-futures = "0.4.72"
    web-sys              = "0.3.99"

[profile.wasm-dev]
  inherits  = "dev"
  opt-level = 1

[profile.server-dev]
  inherits = "dev"

[profile.android-dev]
  inherits = "dev"
