[package]
  authors.workspace = true
  edition.workspace = true
  name              = "domain"
  version.workspace = true

[dependencies]
  # Domain layer depends only on the shared wire contract and basic types
  async-trait.workspace = true
  chrono.workspace      = true
  contracts             = {path = "../contracts"}
  serde.workspace       = true
  thiserror.workspace   = true
  uuid.workspace        = true
