[package]
name = "presentation_frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Frontend presentation layer
contracts = {path = "../contracts"}
dioxus.workspace = true
dioxus-logger.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = {workspace = true, features = ["Document", "Element", "MediaQueryList", "Storage", "Window"]}
uuid.workspace = true
chrono.workspace = true
