[package]
  authors.workspace = true
  edition.workspace = true
  name              = "domain"
  version.workspace = true

[dependencies]
  # Domain layer has NO dependencies on other layers
  # Only external libraries for basic types
  async-trait.workspace = true
  chrono.workspace      = true
  serde.workspace       = true
  thiserror.workspace   = true
  uuid.workspace        = true
